Changes towards version 0.3:
- Minimum scaling extent is now 1,1; fixes mostly small-objects-disappearing
  problem in melee, from chmmravatar
- Fixed a long standing memory leak relating  to planet surface -PhracturedBlue
- Scaled images no longer allocate/free memory all the time -McMartin
- Planet spin on lander launch/return is now enabled -PhracturedBlue
- Fix skipping after planet scan, landing (closes bug 31) -PhracturedBlue
- Decelerate when entering orbit to give a smoother effect -PhracturedBlue
- fix subtitle text overlap issues (bug 232)
- 'Esc' now leaves planet surface (bug233) -PhracturedBlue
- Fix race on exiting starbase (bug 230) -PracturedBlue
- Cleanup shipyard door animation (bug 215) -PhracturedBlue
- Misc .ani fixes; Fixes asteroid destruction crash (bugs 150, 155, 158)
  and somewhat fixes Mycon potrait (bug #183) -fOSSiL
- Moved image scaling to DCQ thread; fixes scale-out-of-sync problem 
  in melee -Mika
- Fix lockup in cyborg melee (fixes 204 and 218) from chmmravatar
- Added -g option to control gamma correction, from chmmravatar
- Restored the CondBank to actually use condition variables properly
  (resolves a race condition under OpenBSD)
- Removed aspects of the legacy graphics code that are never used or that
  are redundant.  More 'C-like' use of the PRIMITIVE datatype.
- Fix various graphics glitches during  dialog.  Especially Spathi Eye,and ZFP
  Closes #23, #156 - PhracturedBlue
- Fix Syreen, KohrAh and Slylandro ship effects to not be screen
  size dependant (corolary to bug 93) - PhracturedBlue
- Line clipping is now handled correctly; fixes #28 (one pixel corruptions)
  and #198 (beam weapons changing direction) -Mika
- Vux warps in close (fixes bug 93) -from Nic
- Fixed lockup on lander-report (Bug #144 annd 187?) - PhracturedBlue
- Version # is now printed in the main menu, from Nic
- Added PC Shipyard + Hangar power lines animation;
  (closes #176) -fOSSiL

0.2:
- Shipyard/Outfit screens now use larger PC graphics;