@@ -31,6 +31,7 @@ extern int optWhichCoarseScan;
 extern int optWhichMenu;
 extern int optWhichFonts;
 extern int optSmoothScroll;
+extern int optMeleeScale;
 
 extern BOOLEAN optSubtitles;
 
