@@ -18,6 +18,7 @@
 
 #include "starcon.h"
 #include "libs/graphics/gfx_common.h"
+#include "libs/graphics/drawable.h"
 
 COUNT DisplayFreeList;
 PRIMITIVE DisplayArray[MAX_DISPLAY_PRIMS];
@@ -980,6 +981,20 @@ PostProcessQueue (register VIEW_STATE view_state, register SIZE scroll_x,
 									[index],
 									ElementPtr->next.image.frame);
 #endif /* SAFE */
+
+							if (index < 2 && scale != 256) 
+							{
+								// assigns next (smaller) zoom level image as mipmap, needed for trilinear scaling
+								((PFRAME_DESC)ElementPtr->next.image.frame)->image->MipmapImg = 
+									((PFRAME_DESC)SetEquFrameIndex (
+									ElementPtr->next.image.farray
+									[index + 1],
+									ElementPtr->next.image.frame))->image->NormalImg;
+							}
+							else
+							{
+								((PFRAME_DESC)ElementPtr->next.image.frame)->image->MipmapImg = NULL;
+							}
 #endif
 						}
 						DisplayArray[ElementPtr->PrimIndex].Object.Stamp.frame =
