@@ -1,4 +1,6 @@
 Changes towards version 0.3:
+- Melee scaling is now trilinear by default, but it's still possible to
+  choose nearest neighbour with --meleescale; fixes #34 -Mika
 - Minimum scaling extent is now 1,1; fixes mostly small-objects-disappearing
   problem in melee, from chmmravatar
 - Fixed a long standing memory leak relating  to planet surface -PhracturedBlue
